# keymaker

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: rust.yml  shiftleft-analysis.yml
assets/css/: login.css  main.css
migrations/: 20201023180226_categories.sql  20201023180230_servers.sql  20201023203649_servers_categories.sql  20201025195756_default_categories.sql  20210124211003_server-confirmed.sql  20210127200336_server-verified-column.sql
src/: errors.rs  main.rs  models.rs  templates.rs  utils.rs
templates/: details.html  index.html  oauth_error.html
templates/auth/: login.html
