[package]
name = "keymaker"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
reqwest = "0.10"
tokio = "0.2.22"
askama_actix = "0.11"
askama = "0.10"
actix-files = "0.3.0"
sqlx = { version = "0.3", features = [ "postgres" ] } # TODO switch to postgres before going live
dotenv = "0.15.0"
anyhow = "1"
listenfd = "0.3.3"