[package]
name = "keymaker"
version = "0.2.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
askama_actix = "0.11"
askama = "0.10"
actix-files = "0.3.0"
sqlx = { version = "0.4", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "chrono", "postgres", "tls", "offline" ] }
dotenv = "0.15.0"
color-eyre = "0.5"
listenfd = "0.3.3"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
